chore: update methods with DTO
