# src/main/java/it/luciorizzi/scacchi/controller/LobbyController.java
@@ -6,7 +6,10 @@ import it.luciorizzi.scacchi.model.lobby.exception.LobbyActionException;
 import it.luciorizzi.scacchi.model.lobby.exception.LobbyNotFoundException;
 import it.luciorizzi.scacchi.model.movement.MoveSet;
 import it.luciorizzi.scacchi.model.type.PieceColor;
+import it.luciorizzi.scacchi.openapi.api.LobbyApiDelegate;
+import it.luciorizzi.scacchi.openapi.model.*;
 import it.luciorizzi.scacchi.service.LobbyService;
+import it.luciorizzi.scacchi.util.ApiDTOConverter;
 import jakarta.servlet.http.HttpServletRequest;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -18,7 +21,7 @@ import java.util.List;
 import java.util.Map;
 
 @RestController
-public class LobbyController {
+public class LobbyController implements LobbyApiDelegate {
 
     private final LobbyService lobbyService;
 
@@ -27,28 +30,33 @@ public class LobbyController {
         this.lobbyService = lobbyService;
     }
 
-    @PostMapping("/lobby")
-    public ResponseEntity<Map<String, Object>> createLobby(String lobbyName, String playerName, String password, PieceColor color, String lobbyType) {
-        return ResponseEntity.ok(lobbyService.createLobby(lobbyName, playerName, password, color, lobbyType));
+    public ResponseEntity<LobbyDTO> createLobby(ColorEnum playerOneColor, LobbyDTO lobbyDTO) {
+        return ResponseEntity.ok( lobbyService.createLobby(lobbyDTO) );
     }
 
-    @GetMapping("/lobby")
-    public ResponseEntity<List<Map<String, Object>>> getLobbies() {
+    public ResponseEntity<List<LobbyDTO>> getPublicLobbies() {
         return ResponseEntity.ok(lobbyService.getPublicLobbies());
     }
 
-    @GetMapping("/lobby/{lobbyId}/possibleMoves")
-    public ResponseEntity<MoveSet> getPossibleMoves(@CookieValue(value = "playerToken", required = false) String token, @PathVariable("lobbyId") String lobbyId, int row, int col) {
-        return ResponseEntity.ok(lobbyService.getPossibleMoves(token, lobbyId, row, col));
+    public ResponseEntity<List<MoveDTO>> getPossibleMoves(String lobbyId, String playerToken, PositionDTO position) {
+        return ResponseEntity.ok(
+                ApiDTOConverter.toListOfMoves(
+                        lobbyService.getPossibleMoves(playerToken, lobbyId, ApiDTOConverter.toPosition(position))));
     }
 
-    @GetMapping("/lobby/{lobbyId}/gameStatus")
-    public ResponseEntity<Boolean> gameStatus(@CookieValue(value = "playerToken", required = false) String token, @PathVariable("lobbyId") String lobbyId) {
-        return ResponseEntity.ok(lobbyService.gameEnded(token, lobbyId));
+    public ResponseEntity<GameStatusDTO> getGameStatus(String lobbyId, String playerToken) {
+        if (lobbyService.gameStarted(lobbyId)) {
+            return ResponseEntity.ok(GameStatusDTO.NOT_STARTED);
+        } else if (lobbyService.gameEnded(playerToken, lobbyId)) {
+            return ResponseEntity.ok(GameStatusDTO.ENDED);
+        } else {
+            return ResponseEntity.ok(GameStatusDTO.ONGOING);
+
+        }
     }
 
     @GetMapping("/lobby/{lobbyId}/getMovesHistory")
-    public ResponseEntity<List<String>> getMovesHistory(@CookieValue(value = "playerToken", required = false) String token, @PathVariable("lobbyId") String lobbyId) {
+    public ResponseEntity<List<String>> getMovesHistory(@CookieValue(value = "playerToken", required = false) String token, @PathVariable("lobbyId") String lobbyId) { //TODO aggiungere alla definizione openapi
         return ResponseEntity.ok(lobbyService.getMovesHistory(token, lobbyId));
     }
 
@@ -57,9 +65,9 @@ public class LobbyController {
         return lobbyService.getLobbyView(token, lobbyId);
     }
 
-    @PostMapping("/lobby/{lobbyId}/join")
-    public ResponseEntity<String> joinLobby(@PathVariable("lobbyId") String lobbyId, String playerName, String password) {
-        return ResponseEntity.ok(lobbyService.joinLobby(lobbyId, playerName, password));
+
+    public ResponseEntity<LobbyDTO> joinLobby(String lobbyId, LobbyJoinRequestDTO lobbyJoinRequestDTO) {
+        return ResponseEntity.ok( lobbyService.joinLobby(lobbyId, lobbyJoinRequestDTO) );
     }
 
     @GetMapping("/lobby/testLobbyFull")
